chore: start auth

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,24 +6,27 @@
 #
 #  id              :integer          not null, primary key
 #  admin           :boolean
-#  email_address   :string
-#  password_digest :string
+#  email_address   :string           not null
+#  password_digest :string           not null
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
 #  account_id      :integer          not null
 #
 # Indexes
 #
-#  index_users_on_account_id  (account_id)
+#  index_users_on_account_id     (account_id)
+#  index_users_on_email_address  (email_address) UNIQUE
 #
+<% password_digest = BCrypt::Password.create("password") %>
+
 one:
   admin: false
-  email_address: MyString
-  password_digest: MyString
   account: one
+  email_address: one@example.com
+  password_digest: <%= password_digest %>
 
 two:
   admin: false
-  email_address: MyString
-  password_digest: MyString
   account: two
+  email_address: two@example.com
+  password_digest: <%= password_digest %>
