chore: refactor rename reservations to bookings

--- a/test/fixtures/bookings.yml
+++ b/test/fixtures/bookings.yml
@@ -2,7 +2,7 @@
 
 # == Schema Information
 #
-# Table name: reservations
+# Table name: bookings
 #
 #  id           :integer          not null, primary key
 #  adults       :integer          default(1)
@@ -16,7 +16,7 @@
 #
 # Indexes
 #
-#  index_reservations_on_room_id  (room_id)
+#  index_bookings_on_room_id  (room_id)
 #
 one:
   room: one
